--- a/front-end/css/styles.css
+++ b/front-end/css/styles.css
@@ -38,6 +38,7 @@ body {
 
 .input-group input,
 input[type="email"],
+input[type="text"],
 input[type="password"] {
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -73,6 +74,11 @@ input {
     color: #777;
     /* line-height: 1.4; /* Adjust line height for better readability if needed */
     list-style-position: inside;
+}
+
+
+.requirement-met {
+    color: green !important;
 }
 
 button {
