--- a/front-end/css/styles.css
+++ b/front-end/css/styles.css
@@ -43,7 +43,7 @@ input[type="password"] {
     border: 1px solid #ccc;
     border-radius: 4px;
     padding: 10px;
-    width: calc(96% - 10px); /* adjust width to account for the gap */
+    width: calc(96% - 10px);
     margin-bottom: 10px;
 }
 
@@ -62,8 +62,8 @@ input {
 }
 
 .password-criteria ul {
-    list-style-type: disc; /* or 'circle' or 'square', depending on desired bullet style */
-    padding-left: 20px; /* Adjust this value to align the bullets as needed */
+    list-style-type: disc;
+    padding-left: 20px;
     margin: 0;
     text-align: left;
 }
@@ -72,7 +72,6 @@ input {
     text-align: left;
     font-size: 12px;
     color: #777;
-    /* line-height: 1.4; /* Adjust line height for better readability if needed */
     list-style-position: inside;
 }
 
@@ -101,4 +100,24 @@ button:hover {
     font-size: 10px;
     color: #777;
     margin-bottom: 5px;
+}
+
+.additional-links p {
+    font-size: 14px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.additional-links a {
+    text-decoration: none;
+    color: #007bff;
+}
+
+.forgot-password-link {
+    display: block; /* Make it a block element to occupy its own line */
+    margin-top: 10px; /* Add some space above the link */
+    text-align: center; /* Center the text */
+    color: #007bff; /* Your link color */
+    text-decoration: none; /* Remove underline */
+    margin-bottom: 20px; /* Space before the button */
 }
